--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,11 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
-  image_picker: ^1.0.4
-  video_player: ^2.8.1
+  image_picker: ^0.8.4+3
+  video_player: ^2.5.2
   video_thumbnail: ^0.5.3
-  path_provider: ^2.1.1
+  path_provider: ^2.0.8
+  
 
 dev_dependencies:
   flutter_test:
